--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,8 +26,8 @@
     </div>
     <div class="menu-style col-md-12">
       <div id="pc" class="btn btn-primary menu col-md-4" onclick="changeview('viewmenutwo')"><span class="fa fa-desktop fa-15x"></span></div>
+      <div id="refresh" class="btn btn-primary menu col-md-4"><span class="fa fa-repeat fa-15x" onclick="window.location.reload()"></span></div>
       <div id="quit" class="btn btn-primary menu col-md-4"><span class="fa fa-times fa-15x"></span></div>
-      <div id="quit" class="btn btn-disable menu col-md-4"><span class="fa fa-times fa-15x" style="color: white;"></span></div>
     </div>
   </div>
   <div id="viewmenutwo" class="viewmenu">
